# caraoke

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cpp  app.hh  audio.c  audio.cpp  audio.h  audio.hh  common.h  common.hh  event_handler.hh  globals.h  globals.hh  karaoke_text_display.cpp  karaoke_text_display.hh  list.c  list.h  loader.c  loader.cpp  loader.h  loader.hh  main.c  main.cpp  pi.cmake  sdl_utils.c  sdl_utils.cpp  sdl_utils.h  sdl_utils.hh  song.json  sprite.cpp  sprite.hh  text.c  text.cpp  text.h  text.hh  texture.c  texture.cpp  texture.h  (+3 more)
json/: ABBA-ABBA   Knowing Me, Knowing You.json  ABBA-ABBA   Lay All Your Love On Me.json  ABBA-ABBA   Money, Money, Money.json  ABBA-ABBA   Voulez Vous.json  ABBA-Fernando.json  Aaron Tippin-aint nothin wrong with the radio aaron tippon.json  Ace of Base-dont turn around ace of base.json  Aha-AHA   Take On Me.json  Barry Manilow-Barry Manilow   Copacabana.json  Beatles-Hey Jude.json  Belinda Carlisle-heaven is a place on earth belinda carlisle.json  Billy Idol-hotcity.json  Bob Marley-Bob Marley   No Woman, No Cry.json  Bread-guitar man bread.json  Bryan Adams-Have you ever loved a woman.json  Bryan Adams-heaven bryan adams.json  C n C Music Factory-Everybody Dance Now.json  Chicago-after the love has gone chicago.json  Cranberries-twenty one cranberries.json  Cyndi Lauper-timeaft.json  ELVIS Good luck charm.json  ELVIS Heartbreak hotel.json  ELVIS Puppet on a string.json  Elton John-cand.json  Eric Clapton-bad love eric clapton.json  Eurythmics-don't ask me why.json  Eurythmics-here comes the rain again.json  Eurythmics-it's all right.json  Eurythmics-love is a stranger.json  Eurythmics-missionary man.json  Eurythmics-sisters are doi themselves.json  Eurythmics-sweet dreams.json  Eurythmics-there must be an angel.json  Eurythmics-would i lie to you.json  Four Seasons-Four Seasons, The   December 1963.json  Genesis-Genesis   Invisible Touch.json  Gerry Raferty-Gerry Raferty   Baker Street.json  Human League-dontyouw.json  John Denver-count.json  Lionel Richie-Lionel Ritchie   Easy.json  (+61 more)
src/: app.cpp  app.hh  audio.cpp  audio.hh  common.cpp  common.hh  event_handler.cpp  event_handler.hh  files.cpp  files.hh  globals.cpp  globals.hh  karaoke_scene.cpp  karaoke_scene.hh  karaoke_text_display.cpp  karaoke_text_display.hh  loader.cpp  loader.hh  main.cpp  rectangle.cpp  rectangle.hh  scene.cpp  scene.hh  sdl_utils.cpp  sdl_utils.hh  song_info.cpp  song_info.hh  sound_controller.cpp  sound_controller.hh  sprite.cpp  sprite.hh  text.cpp  text.hh  text_sprite.cpp  text_sprite.hh  texture.cpp  texture.hh  texture_sprite.hh  thriller_scene.cpp  thriller_scene.hh  (+2 more)
